add get to storage service
