# Receiver/app.py
@@ -1,12 +1,8 @@
 import connexion
 import requests
 from connexion import NoContent
-import datetime
-from datetime import datetime
 import json
-import os
 import yaml
-import logging
 import logging.config
 import uuid
 
@@ -25,40 +21,8 @@ with open('log_conf.yml', 'r') as f:
 logger = logging.getLogger('receiver')
 
 
-# def write_request(body):
-#     """ add request body to json """
-#     if os.path.isfile(EVENT_FILE):
-#         with open(EVENT_FILE, "r+") as file1:
-#             file_content = json.load(file1)
-#     else:
-#         file_content = []
-#     if 'fan_speed' in body:
-#         formatted_object = {
-#             "received_timestamp": str(datetime.now()),
-#             "request_data": str(
-#                 f"The GPU {body['ming_card_id']} of ming rig {body['ming_rig_id']}'s {body['fan_speed']['fan_position']}"
-#                 f" fan speed is {body['fan_speed']['fan_speed']}")
-#         }
-#     else:
-#         formatted_object = {
-#             "received_timestamp": str(datetime.now()),
-#             "request_data": str(f"The GPU {body['ming_card_id']} of ming rig {body['ming_rig_id']}'s core "
-#                                 f"temperature is {body['temperature']['core_temperature']}")
-#         }
-#     file_content.append(formatted_object)
-#
-#     if len(file_content) > MAX_EVENTS:
-#         file_content.pop(0)
-#     json_object = json.dumps(file_content, indent=4)
-#
-#     with open(EVENT_FILE, "w+") as file2:
-#         file2.write(json_object)
-#     return json_object
-
-
 def report_temperature(body):
     """ Receives a hardware temperature """
-    # write_request(body)
     trace_id = uuid.uuid1()
     body['trace_id'] = f'{trace_id}'
     payload = json.dumps(body)
@@ -77,7 +41,6 @@ def report_temperature(body):
 
 def report_fan_speed(body):
     """ Receives a fan speed """
-    # write_request(body)
     trace_id = uuid.uuid1()
     body['trace_id'] = f'{trace_id}'
     payload = json.dumps(body)
