# Storage/app.py
@@ -8,10 +8,11 @@ from temperature import Temperature
 import yaml
 import logging
 import logging.config
+import datetime
+from datetime import datetime
 
 with open('app_conf.yml', 'r') as f:
     app_config = yaml.safe_load(f.read())
-
 
 with open('log_conf.yml', 'r') as f:
     log_config = yaml.safe_load(f.read())
@@ -19,14 +20,13 @@ with open('log_conf.yml', 'r') as f:
 
 logger = logging.getLogger('storage')
 
-
 user = app_config['datastore']['user']
 password = app_config['datastore']['password']
 port = app_config['datastore']['port']
 hostname = app_config['datastore']['hostname']
 db = app_config['datastore']['db']
 
-DB_ENGINE = create_engine (f'mysql+pymysql://{user}:{password}@{hostname}:{port}/{db}')
+DB_ENGINE = create_engine(f'mysql+pymysql://{user}:{password}@{hostname}:{port}/{db}')
 Base.metadata.bind = DB_ENGINE
 DB_SESSION = sessionmaker(bind=DB_ENGINE)
 
@@ -65,6 +65,36 @@ def report_fan_speed(body):
     trace_id = body['trace_id']
     logger.debug(f'Stored event fan speed request with a trace id of {trace_id}')
     return NoContent, 201
+
+
+def get_temperature(timestamp):
+    """ Gets new temperature after the timestamp """
+    session = DB_SESSION()
+    timestamp_datetime = datetime.datetime.strptime(timestamp, "%Y-%m-%dT%H:%M:%SZ")
+    readings = session.query(Temperature).filter(Temperature.date_created >=
+                                                 timestamp_datetime)
+    results_list = []
+    for reading in readings:
+        results_list.append(reading.to_dict())
+    session.close()
+    logger.info("Query for Temperature readings after %s returns %d results" %
+                (timestamp, len(results_list)))
+    return results_list, 200
+
+
+def get_fan_speed(timestamp):
+    """ Gets new fan speed after the timestamp """
+    session = DB_SESSION()
+    timestamp_datetime = datetime.datetime.strptime(timestamp, "%Y-%m-%dT%H:%M:%SZ")
+    readings = session.query(Temperature).filter(FanSpeed.date_created >=
+                                                 timestamp_datetime)
+    results_list = []
+    for reading in readings:
+        results_list.append(reading.to_dict())
+    session.close()
+    logger.info("Query for fan speed readings after %s returns %d results" %
+                (timestamp, len(results_list)))
+    return results_list, 200
 
 
 app = connexion.FlaskApp(__name__, specification_dir='')
